# test

./: LICENSE
insert_sort/: CMakeLists.txt
insert_sort/inc/: insert_sort.h  print.h
insert_sort/src/: insert_sort.cpp  main.cpp  print.cpp
part_sort/: CMakeLists.txt
part_sort/inc/: part_sort.h
part_sort/src/: main.cpp  part_sort.cpp
